# Connect4

./: CMakeLists.txt  main.cpp
AI/: AI.cpp  AI.h
Constants/: BoardConstants.h
GameBoard/: Board.cpp  Board.h  BoardFactory.cpp  BoardFactory.h
